[package]
name = "nitrogen-quic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogen-utils = { path = "../nitrogen-utils" }

anyhow = "1"

pin-project-lite = "0"

futures = "0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["codec"] }

s2n-quic = { version = "1", default-features = false, features = [
    "provider-address-token-default",
    "provider-tls-rustls",
    "provider-event-tracing",
] }
rustls-pemfile = "1"
