[package]
name = "nitrogen-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

async-trait = "0"
futures = "0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["codec"] }

serde = { version = "1", features = ["derive"] }
tokio-serde = { version = "0", features = ["messagepack"] }
bytes = "1"
